Assignments/Assignment2/ParCpp.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.9 from ParCpp.y
-----------------------------------------------------------------------------

state 56 contains 1 shift/reduce conflicts.
state 59 contains 1 shift/reduce conflicts.
state 66 contains 1 shift/reduce conflicts.
state 69 contains 3 shift/reduce conflicts.
state 77 contains 1 shift/reduce conflicts.
state 123 contains 9 shift/reduce conflicts.
state 126 contains 9 shift/reduce conflicts.
state 136 contains 9 shift/reduce conflicts.
state 142 contains 9 shift/reduce conflicts.
state 144 contains 9 shift/reduce conflicts.
state 145 contains 9 shift/reduce conflicts.
state 146 contains 9 shift/reduce conflicts.
state 147 contains 9 shift/reduce conflicts.
state 148 contains 9 shift/reduce conflicts.
state 149 contains 9 shift/reduce conflicts.
state 150 contains 9 shift/reduce conflicts.
state 165 contains 9 shift/reduce conflicts.
state 166 contains 19 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pFunction -> Function                       (1)
	%start_pDecl -> Decl                               (2)
	%start_pListFunction -> ListFunction               (3)
	%start_pListStm -> ListStm                         (4)
	%start_pListDecl -> ListDecl                       (5)
	%start_pListIdent -> ListIdent                     (6)
	%start_pListOut -> ListOut                         (7)
	%start_pListIn -> ListIn                           (8)
	%start_pStm -> Stm                                 (9)
	%start_pName -> Name                               (10)
	%start_pOut -> Out                                 (11)
	%start_pIn -> In                                   (12)
	%start_pExp -> Exp                                 (13)
	%start_pExp1 -> Exp1                               (14)
	%start_pExp2 -> Exp2                               (15)
	%start_pExp3 -> Exp3                               (16)
	%start_pExp4 -> Exp4                               (17)
	%start_pListExp -> ListExp                         (18)
	%start_pType -> Type                               (19)
	Ident -> L_ident                                   (20)
	String -> L_quoted                                 (21)
	Integer -> L_integ                                 (22)
	Double -> L_doubl                                  (23)
	Program -> ListFunction                            (24)
	Function -> Type Ident '(' ListDecl ')' '{' ListStm '}'   (25)
	Decl -> Type ListIdent                             (26)
	ListFunction ->                                    (27)
	ListFunction -> ListFunction Function              (28)
	ListStm ->                                         (29)
	ListStm -> ListStm Stm                             (30)
	ListDecl ->                                        (31)
	ListDecl -> Decl                                   (32)
	ListDecl -> Decl ',' ListDecl                      (33)
	ListIdent -> Ident                                 (34)
	ListIdent -> Ident ',' ListIdent                   (35)
	ListOut -> Out                                     (36)
	ListOut -> Out '<<' ListOut                        (37)
	ListIn -> In                                       (38)
	ListIn -> In '>>' ListIn                           (39)
	Stm -> Decl ';'                                    (40)
	Stm -> Exp ';'                                     (41)
	Stm -> '{' ListStm '}'                             (42)
	Stm -> 'while' '(' ListExp ')' ListStm             (43)
	Stm -> 'return' Exp ';'                            (44)
	Stm -> 'using' Stm ';'                             (45)
	Stm -> Name ';'                                    (46)
	Stm -> ListOut ';'                                 (47)
	Stm -> ListIn ';'                                  (48)
	Name -> Ident '::' Ident                           (49)
	Out -> Name                                        (50)
	Out -> Exp                                         (51)
	In -> Name                                         (52)
	In -> Exp                                          (53)
	Exp -> Ident '.' Ident '(' ListExp ')' ';'         (54)
	Exp -> Ident '=' Exp                               (55)
	Exp -> Exp '>>' Exp                                (56)
	Exp -> Exp '<<' Exp                                (57)
	Exp -> Exp '?' Exp ':' Exp                         (58)
	Exp -> Exp '==' Exp                                (59)
	Exp -> Ident '[' Exp ']'                           (60)
	Exp -> Ident '&'                                   (61)
	Exp -> '!' Exp                                     (62)
	Exp -> Exp '<=' Exp                                (63)
	Exp -> Exp '>=' Exp                                (64)
	Exp -> '*' Ident                                   (65)
	Exp -> Exp '&&' Exp                                (66)
	Exp -> Exp '->' Exp                                (67)
	Exp -> '++' Exp                                    (68)
	Exp -> Exp '||' Exp                                (69)
	Exp -> Exp1                                        (70)
	Exp1 -> Exp2 '<' Exp2                              (71)
	Exp1 -> Exp2                                       (72)
	Exp2 -> Exp2 '+' Exp3                              (73)
	Exp2 -> Exp2 '-' Exp3                              (74)
	Exp2 -> Exp3                                       (75)
	Exp3 -> Exp3 '*' Exp4                              (76)
	Exp3 -> Exp4                                       (77)
	Exp4 -> Ident '(' ListExp ')'                      (78)
	Exp4 -> Ident                                      (79)
	Exp4 -> String                                     (80)
	Exp4 -> Integer                                    (81)
	Exp4 -> Double                                     (82)
	Exp4 -> '(' Exp ')'                                (83)
	ListExp ->                                         (84)
	ListExp -> Exp                                     (85)
	ListExp -> Exp ',' ListExp                         (86)
	Type -> 'int'                                      (87)
	Type -> 'double'                                   (88)
	Type -> 'string'                                   (89)
	Type -> 'std::string'                              (90)
	Type -> 'vector<double>'                           (91)
	Type -> 'typedef'                                  (92)
	Type -> 'bool'                                     (93)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'&'            { PT _ (TS _ 2) }
	'&&'           { PT _ (TS _ 3) }
	'('            { PT _ (TS _ 4) }
	')'            { PT _ (TS _ 5) }
	'*'            { PT _ (TS _ 6) }
	'+'            { PT _ (TS _ 7) }
	'++'           { PT _ (TS _ 8) }
	','            { PT _ (TS _ 9) }
	'-'            { PT _ (TS _ 10) }
	'->'           { PT _ (TS _ 11) }
	'.'            { PT _ (TS _ 12) }
	':'            { PT _ (TS _ 13) }
	'::'           { PT _ (TS _ 14) }
	';'            { PT _ (TS _ 15) }
	'<'            { PT _ (TS _ 16) }
	'<<'           { PT _ (TS _ 17) }
	'<='           { PT _ (TS _ 18) }
	'='            { PT _ (TS _ 19) }
	'=='           { PT _ (TS _ 20) }
	'>='           { PT _ (TS _ 21) }
	'>>'           { PT _ (TS _ 22) }
	'?'            { PT _ (TS _ 23) }
	'['            { PT _ (TS _ 24) }
	']'            { PT _ (TS _ 25) }
	'bool'         { PT _ (TS _ 26) }
	'double'       { PT _ (TS _ 27) }
	'int'          { PT _ (TS _ 28) }
	'return'       { PT _ (TS _ 29) }
	'std::string'  { PT _ (TS _ 30) }
	'string'       { PT _ (TS _ 31) }
	'typedef'      { PT _ (TS _ 32) }
	'using'        { PT _ (TS _ 33) }
	'vector<double>'{ PT _ (TS _ 34) }
	'while'        { PT _ (TS _ 35) }
	'{'            { PT _ (TS _ 36) }
	'||'           { PT _ (TS _ 37) }
	'}'            { PT _ (TS _ 38) }
	L_ident        { PT _ (TV $$) }
	L_quoted       { PT _ (TL $$) }
	L_integ        { PT _ (TI $$) }
	L_doubl        { PT _ (TD $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pFunction rule  1
	%start_pDecl    rule  2
	%start_pListFunction rule  3
	%start_pListStm rule  4
	%start_pListDecl rule  5
	%start_pListIdent rule  6
	%start_pListOut rule  7
	%start_pListIn  rule  8
	%start_pStm     rule  9
	%start_pName    rule  10
	%start_pOut     rule  11
	%start_pIn      rule  12
	%start_pExp     rule  13
	%start_pExp1    rule  14
	%start_pExp2    rule  15
	%start_pExp3    rule  16
	%start_pExp4    rule  17
	%start_pListExp rule  18
	%start_pType    rule  19
	Ident           rule  20
	String          rule  21
	Integer         rule  22
	Double          rule  23
	Program         rule  24
	Function        rule  25
	Decl            rule  26
	ListFunction    rules 27, 28
	ListStm         rules 29, 30
	ListDecl        rules 31, 32, 33
	ListIdent       rules 34, 35
	ListOut         rules 36, 37
	ListIn          rules 38, 39
	Stm             rules 40, 41, 42, 43, 44, 45, 46, 47, 48
	Name            rule  49
	Out             rules 50, 51
	In              rules 52, 53
	Exp             rules 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70
	Exp1            rules 71, 72
	Exp2            rules 73, 74, 75
	Exp3            rules 76, 77
	Exp4            rules 78, 79, 80, 81, 82, 83
	ListExp         rules 84, 85, 86
	Type            rules 87, 88, 89, 90, 91, 92, 93

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'bool'         reduce using rule 27
	'double'       reduce using rule 27
	'int'          reduce using rule 27
	'std::string'  reduce using rule 27
	'string'       reduce using rule 27
	'typedef'      reduce using rule 27
	'vector<double>'reduce using rule 27
	%eof           reduce using rule 27

	Program        goto state 86
	ListFunction   goto state 87

State 1


	'bool'         shift, and enter state 23
	'double'       shift, and enter state 24
	'int'          shift, and enter state 25
	'std::string'  shift, and enter state 26
	'string'       shift, and enter state 27
	'typedef'      shift, and enter state 28
	'vector<double>'shift, and enter state 29

	Function       goto state 84
	Type           goto state 85

State 2


	'bool'         shift, and enter state 23
	'double'       shift, and enter state 24
	'int'          shift, and enter state 25
	'std::string'  shift, and enter state 26
	'string'       shift, and enter state 27
	'typedef'      shift, and enter state 28
	'vector<double>'shift, and enter state 29

	Decl           goto state 83
	Type           goto state 70

State 3


	'bool'         reduce using rule 27
	'double'       reduce using rule 27
	'int'          reduce using rule 27
	'std::string'  reduce using rule 27
	'string'       reduce using rule 27
	'typedef'      reduce using rule 27
	'vector<double>'reduce using rule 27
	%eof           reduce using rule 27

	ListFunction   goto state 82

State 4


	'!'            reduce using rule 29
	'('            reduce using rule 29
	'*'            reduce using rule 29
	'++'           reduce using rule 29
	'bool'         reduce using rule 29
	'double'       reduce using rule 29
	'int'          reduce using rule 29
	'return'       reduce using rule 29
	'std::string'  reduce using rule 29
	'string'       reduce using rule 29
	'typedef'      reduce using rule 29
	'using'        reduce using rule 29
	'vector<double>'reduce using rule 29
	'while'        reduce using rule 29
	'{'            reduce using rule 29
	L_ident        reduce using rule 29
	L_quoted       reduce using rule 29
	L_integ        reduce using rule 29
	L_doubl        reduce using rule 29
	%eof           reduce using rule 29

	ListStm        goto state 81

State 5


	'bool'         shift, and enter state 23
	'double'       shift, and enter state 24
	'int'          shift, and enter state 25
	'std::string'  shift, and enter state 26
	'string'       shift, and enter state 27
	'typedef'      shift, and enter state 28
	'vector<double>'shift, and enter state 29
	%eof           reduce using rule 31

	Decl           goto state 79
	ListDecl       goto state 80
	Type           goto state 70

State 6


	L_ident        shift, and enter state 21

	Ident          goto state 77
	ListIdent      goto state 78

State 7


	'!'            shift, and enter state 40
	'('            shift, and enter state 41
	'*'            shift, and enter state 42
	'++'           shift, and enter state 43
	L_ident        shift, and enter state 21
	L_quoted       shift, and enter state 44
	L_integ        shift, and enter state 45
	L_doubl        shift, and enter state 46

	Ident          goto state 53
	String         goto state 31
	Integer        goto state 32
	Double         goto state 33
	ListOut        goto state 76
	Name           goto state 57
	Out            goto state 67
	Exp            goto state 59
	Exp1           goto state 35
	Exp2           goto state 36
	Exp3           goto state 37
	Exp4           goto state 38

State 8


	'!'            shift, and enter state 40
	'('            shift, and enter state 41
	'*'            shift, and enter state 42
	'++'           shift, and enter state 43
	L_ident        shift, and enter state 21
	L_quoted       shift, and enter state 44
	L_integ        shift, and enter state 45
	L_doubl        shift, and enter state 46

	Ident          goto state 53
	String         goto state 31
	Integer        goto state 32
	Double         goto state 33
	ListIn         goto state 75
	Name           goto state 54
	In             goto state 68
	Exp            goto state 56
	Exp1           goto state 35
	Exp2           goto state 36
	Exp3           goto state 37
	Exp4           goto state 38

State 9


	'!'            shift, and enter state 40
	'('            shift, and enter state 41
	'*'            shift, and enter state 42
	'++'           shift, and enter state 43
	'bool'         shift, and enter state 23
	'double'       shift, and enter state 24
	'int'          shift, and enter state 25
	'return'       shift, and enter state 71
	'std::string'  shift, and enter state 26
	'string'       shift, and enter state 27
	'typedef'      shift, and enter state 28
	'using'        shift, and enter state 72
	'vector<double>'shift, and enter state 29
	'while'        shift, and enter state 73
	'{'            shift, and enter state 74
	L_ident        shift, and enter state 21
	L_quoted       shift, and enter state 44
	L_integ        shift, and enter state 45
	L_doubl        shift, and enter state 46

	Ident          goto state 53
	String         goto state 31
	Integer        goto state 32
	Double         goto state 33
	Decl           goto state 62
	ListOut        goto state 63
	ListIn         goto state 64
	Stm            goto state 65
	Name           goto state 66
	Out            goto state 67
	In             goto state 68
	Exp            goto state 69
	Exp1           goto state 35
	Exp2           goto state 36
	Exp3           goto state 37
	Exp4           goto state 38
	Type           goto state 70

State 10


	L_ident        shift, and enter state 21

	Ident          goto state 60
	Name           goto state 61

State 11


	'!'            shift, and enter state 40
	'('            shift, and enter state 41
	'*'            shift, and enter state 42
	'++'           shift, and enter state 43
	L_ident        shift, and enter state 21
	L_quoted       shift, and enter state 44
	L_integ        shift, and enter state 45
	L_doubl        shift, and enter state 46

	Ident          goto state 53
	String         goto state 31
	Integer        goto state 32
	Double         goto state 33
	Name           goto state 57
	Out            goto state 58
	Exp            goto state 59
	Exp1           goto state 35
	Exp2           goto state 36
	Exp3           goto state 37
	Exp4           goto state 38

State 12


	'!'            shift, and enter state 40
	'('            shift, and enter state 41
	'*'            shift, and enter state 42
	'++'           shift, and enter state 43
	L_ident        shift, and enter state 21
	L_quoted       shift, and enter state 44
	L_integ        shift, and enter state 45
	L_doubl        shift, and enter state 46

	Ident          goto state 53
	String         goto state 31
	Integer        goto state 32
	Double         goto state 33
	Name           goto state 54
	In             goto state 55
	Exp            goto state 56
	Exp1           goto state 35
	Exp2           goto state 36
	Exp3           goto state 37
	Exp4           goto state 38

State 13


	'!'            shift, and enter state 40
	'('            shift, and enter state 41
	'*'            shift, and enter state 42
	'++'           shift, and enter state 43
	L_ident        shift, and enter state 21
	L_quoted       shift, and enter state 44
	L_integ        shift, and enter state 45
	L_doubl        shift, and enter state 46

	Ident          goto state 30
	String         goto state 31
	Integer        goto state 32
	Double         goto state 33
	Exp            goto state 52
	Exp1           goto state 35
	Exp2           goto state 36
	Exp3           goto state 37
	Exp4           goto state 38

State 14


	'('            shift, and enter state 41
	L_ident        shift, and enter state 21
	L_quoted       shift, and enter state 44
	L_integ        shift, and enter state 45
	L_doubl        shift, and enter state 46

	Ident          goto state 47
	String         goto state 31
	Integer        goto state 32
	Double         goto state 33
	Exp1           goto state 51
	Exp2           goto state 36
	Exp3           goto state 37
	Exp4           goto state 38

State 15


	'('            shift, and enter state 41
	L_ident        shift, and enter state 21
	L_quoted       shift, and enter state 44
	L_integ        shift, and enter state 45
	L_doubl        shift, and enter state 46

	Ident          goto state 47
	String         goto state 31
	Integer        goto state 32
	Double         goto state 33
	Exp2           goto state 50
	Exp3           goto state 37
	Exp4           goto state 38

State 16


	'('            shift, and enter state 41
	L_ident        shift, and enter state 21
	L_quoted       shift, and enter state 44
	L_integ        shift, and enter state 45
	L_doubl        shift, and enter state 46

	Ident          goto state 47
	String         goto state 31
	Integer        goto state 32
	Double         goto state 33
	Exp3           goto state 49
	Exp4           goto state 38

State 17


	'('            shift, and enter state 41
	L_ident        shift, and enter state 21
	L_quoted       shift, and enter state 44
	L_integ        shift, and enter state 45
	L_doubl        shift, and enter state 46

	Ident          goto state 47
	String         goto state 31
	Integer        goto state 32
	Double         goto state 33
	Exp4           goto state 48

State 18


	'!'            shift, and enter state 40
	'('            shift, and enter state 41
	'*'            shift, and enter state 42
	'++'           shift, and enter state 43
	L_ident        shift, and enter state 21
	L_quoted       shift, and enter state 44
	L_integ        shift, and enter state 45
	L_doubl        shift, and enter state 46
	%eof           reduce using rule 84

	Ident          goto state 30
	String         goto state 31
	Integer        goto state 32
	Double         goto state 33
	Exp            goto state 34
	Exp1           goto state 35
	Exp2           goto state 36
	Exp3           goto state 37
	Exp4           goto state 38
	ListExp        goto state 39

State 19


	'bool'         shift, and enter state 23
	'double'       shift, and enter state 24
	'int'          shift, and enter state 25
	'std::string'  shift, and enter state 26
	'string'       shift, and enter state 27
	'typedef'      shift, and enter state 28
	'vector<double>'shift, and enter state 29

	Type           goto state 22

State 20


	L_ident        shift, and enter state 21


State 21

	Ident -> L_ident .                                  (rule 20)

	'&'            reduce using rule 20
	'&&'           reduce using rule 20
	'('            reduce using rule 20
	')'            reduce using rule 20
	'*'            reduce using rule 20
	'+'            reduce using rule 20
	','            reduce using rule 20
	'-'            reduce using rule 20
	'->'           reduce using rule 20
	'.'            reduce using rule 20
	':'            reduce using rule 20
	'::'           reduce using rule 20
	';'            reduce using rule 20
	'<'            reduce using rule 20
	'<<'           reduce using rule 20
	'<='           reduce using rule 20
	'='            reduce using rule 20
	'=='           reduce using rule 20
	'>='           reduce using rule 20
	'>>'           reduce using rule 20
	'?'            reduce using rule 20
	'['            reduce using rule 20
	']'            reduce using rule 20
	'||'           reduce using rule 20
	%eof           reduce using rule 20


State 22

	%start_pType -> Type .                              (rule 19)

	%eof           accept


State 23

	Type -> 'bool' .                                    (rule 93)

	L_ident        reduce using rule 93
	%eof           reduce using rule 93


State 24

	Type -> 'double' .                                  (rule 88)

	L_ident        reduce using rule 88
	%eof           reduce using rule 88


State 25

	Type -> 'int' .                                     (rule 87)

	L_ident        reduce using rule 87
	%eof           reduce using rule 87


State 26

	Type -> 'std::string' .                             (rule 90)

	L_ident        reduce using rule 90
	%eof           reduce using rule 90


State 27

	Type -> 'string' .                                  (rule 89)

	L_ident        reduce using rule 89
	%eof           reduce using rule 89


State 28

	Type -> 'typedef' .                                 (rule 92)

	L_ident        reduce using rule 92
	%eof           reduce using rule 92


State 29

	Type -> 'vector<double>' .                          (rule 91)

	L_ident        reduce using rule 91
	%eof           reduce using rule 91


State 30

	Exp -> Ident . '.' Ident '(' ListExp ')' ';'        (rule 54)
	Exp -> Ident . '=' Exp                              (rule 55)
	Exp -> Ident . '[' Exp ']'                          (rule 60)
	Exp -> Ident . '&'                                  (rule 61)
	Exp4 -> Ident . '(' ListExp ')'                     (rule 78)
	Exp4 -> Ident .                                     (rule 79)

	'&'            shift, and enter state 115
	'&&'           reduce using rule 79
	'('            shift, and enter state 116
	')'            reduce using rule 79
	'*'            reduce using rule 79
	'+'            reduce using rule 79
	','            reduce using rule 79
	'-'            reduce using rule 79
	'->'           reduce using rule 79
	'.'            shift, and enter state 117
	':'            reduce using rule 79
	';'            reduce using rule 79
	'<'            reduce using rule 79
	'<<'           reduce using rule 79
	'<='           reduce using rule 79
	'='            shift, and enter state 118
	'=='           reduce using rule 79
	'>='           reduce using rule 79
	'>>'           reduce using rule 79
	'?'            reduce using rule 79
	'['            shift, and enter state 119
	']'            reduce using rule 79
	'||'           reduce using rule 79
	%eof           reduce using rule 79


State 31

	Exp4 -> String .                                    (rule 80)

	'&&'           reduce using rule 80
	')'            reduce using rule 80
	'*'            reduce using rule 80
	'+'            reduce using rule 80
	','            reduce using rule 80
	'-'            reduce using rule 80
	'->'           reduce using rule 80
	':'            reduce using rule 80
	';'            reduce using rule 80
	'<'            reduce using rule 80
	'<<'           reduce using rule 80
	'<='           reduce using rule 80
	'=='           reduce using rule 80
	'>='           reduce using rule 80
	'>>'           reduce using rule 80
	'?'            reduce using rule 80
	']'            reduce using rule 80
	'||'           reduce using rule 80
	%eof           reduce using rule 80


State 32

	Exp4 -> Integer .                                   (rule 81)

	'&&'           reduce using rule 81
	')'            reduce using rule 81
	'*'            reduce using rule 81
	'+'            reduce using rule 81
	','            reduce using rule 81
	'-'            reduce using rule 81
	'->'           reduce using rule 81
	':'            reduce using rule 81
	';'            reduce using rule 81
	'<'            reduce using rule 81
	'<<'           reduce using rule 81
	'<='           reduce using rule 81
	'=='           reduce using rule 81
	'>='           reduce using rule 81
	'>>'           reduce using rule 81
	'?'            reduce using rule 81
	']'            reduce using rule 81
	'||'           reduce using rule 81
	%eof           reduce using rule 81


State 33

	Exp4 -> Double .                                    (rule 82)

	'&&'           reduce using rule 82
	')'            reduce using rule 82
	'*'            reduce using rule 82
	'+'            reduce using rule 82
	','            reduce using rule 82
	'-'            reduce using rule 82
	'->'           reduce using rule 82
	':'            reduce using rule 82
	';'            reduce using rule 82
	'<'            reduce using rule 82
	'<<'           reduce using rule 82
	'<='           reduce using rule 82
	'=='           reduce using rule 82
	'>='           reduce using rule 82
	'>>'           reduce using rule 82
	'?'            reduce using rule 82
	']'            reduce using rule 82
	'||'           reduce using rule 82
	%eof           reduce using rule 82


State 34

	Exp -> Exp . '>>' Exp                               (rule 56)
	Exp -> Exp . '<<' Exp                               (rule 57)
	Exp -> Exp . '?' Exp ':' Exp                        (rule 58)
	Exp -> Exp . '==' Exp                               (rule 59)
	Exp -> Exp . '<=' Exp                               (rule 63)
	Exp -> Exp . '>=' Exp                               (rule 64)
	Exp -> Exp . '&&' Exp                               (rule 66)
	Exp -> Exp . '->' Exp                               (rule 67)
	Exp -> Exp . '||' Exp                               (rule 69)
	ListExp -> Exp .                                    (rule 85)
	ListExp -> Exp . ',' ListExp                        (rule 86)

	'&&'           shift, and enter state 98
	')'            reduce using rule 85
	','            shift, and enter state 128
	'->'           shift, and enter state 99
	'<<'           shift, and enter state 101
	'<='           shift, and enter state 102
	'=='           shift, and enter state 103
	'>='           shift, and enter state 104
	'>>'           shift, and enter state 105
	'?'            shift, and enter state 106
	'||'           shift, and enter state 107
	%eof           reduce using rule 85


State 35

	Exp -> Exp1 .                                       (rule 70)

	'&&'           reduce using rule 70
	')'            reduce using rule 70
	','            reduce using rule 70
	'->'           reduce using rule 70
	':'            reduce using rule 70
	';'            reduce using rule 70
	'<<'           reduce using rule 70
	'<='           reduce using rule 70
	'=='           reduce using rule 70
	'>='           reduce using rule 70
	'>>'           reduce using rule 70
	'?'            reduce using rule 70
	']'            reduce using rule 70
	'||'           reduce using rule 70
	%eof           reduce using rule 70


State 36

	Exp1 -> Exp2 . '<' Exp2                             (rule 71)
	Exp1 -> Exp2 .                                      (rule 72)
	Exp2 -> Exp2 . '+' Exp3                             (rule 73)
	Exp2 -> Exp2 . '-' Exp3                             (rule 74)

	'&&'           reduce using rule 72
	')'            reduce using rule 72
	'+'            shift, and enter state 120
	','            reduce using rule 72
	'-'            shift, and enter state 121
	'->'           reduce using rule 72
	':'            reduce using rule 72
	';'            reduce using rule 72
	'<'            shift, and enter state 127
	'<<'           reduce using rule 72
	'<='           reduce using rule 72
	'=='           reduce using rule 72
	'>='           reduce using rule 72
	'>>'           reduce using rule 72
	'?'            reduce using rule 72
	']'            reduce using rule 72
	'||'           reduce using rule 72
	%eof           reduce using rule 72


State 37

	Exp2 -> Exp3 .                                      (rule 75)
	Exp3 -> Exp3 . '*' Exp4                             (rule 76)

	'&&'           reduce using rule 75
	')'            reduce using rule 75
	'*'            shift, and enter state 122
	'+'            reduce using rule 75
	','            reduce using rule 75
	'-'            reduce using rule 75
	'->'           reduce using rule 75
	':'            reduce using rule 75
	';'            reduce using rule 75
	'<'            reduce using rule 75
	'<<'           reduce using rule 75
	'<='           reduce using rule 75
	'=='           reduce using rule 75
	'>='           reduce using rule 75
	'>>'           reduce using rule 75
	'?'            reduce using rule 75
	']'            reduce using rule 75
	'||'           reduce using rule 75
	%eof           reduce using rule 75


State 38

	Exp3 -> Exp4 .                                      (rule 77)

	'&&'           reduce using rule 77
	')'            reduce using rule 77
	'*'            reduce using rule 77
	'+'            reduce using rule 77
	','            reduce using rule 77
	'-'            reduce using rule 77
	'->'           reduce using rule 77
	':'            reduce using rule 77
	';'            reduce using rule 77
	'<'            reduce using rule 77
	'<<'           reduce using rule 77
	'<='           reduce using rule 77
	'=='           reduce using rule 77
	'>='           reduce using rule 77
	'>>'           reduce using rule 77
	'?'            reduce using rule 77
	']'            reduce using rule 77
	'||'           reduce using rule 77
	%eof           reduce using rule 77


State 39

	%start_pListExp -> ListExp .                        (rule 18)

	%eof           accept


State 40

	Exp -> '!' . Exp                                    (rule 62)

	'!'            shift, and enter state 40
	'('            shift, and enter state 41
	'*'            shift, and enter state 42
	'++'           shift, and enter state 43
	L_ident        shift, and enter state 21
	L_quoted       shift, and enter state 44
	L_integ        shift, and enter state 45
	L_doubl        shift, and enter state 46

	Ident          goto state 30
	String         goto state 31
	Integer        goto state 32
	Double         goto state 33
	Exp            goto state 126
	Exp1           goto state 35
	Exp2           goto state 36
	Exp3           goto state 37
	Exp4           goto state 38

State 41

	Exp4 -> '(' . Exp ')'                               (rule 83)

	'!'            shift, and enter state 40
	'('            shift, and enter state 41
	'*'            shift, and enter state 42
	'++'           shift, and enter state 43
	L_ident        shift, and enter state 21
	L_quoted       shift, and enter state 44
	L_integ        shift, and enter state 45
	L_doubl        shift, and enter state 46

	Ident          goto state 30
	String         goto state 31
	Integer        goto state 32
	Double         goto state 33
	Exp            goto state 125
	Exp1           goto state 35
	Exp2           goto state 36
	Exp3           goto state 37
	Exp4           goto state 38

State 42

	Exp -> '*' . Ident                                  (rule 65)

	L_ident        shift, and enter state 21

	Ident          goto state 124

State 43

	Exp -> '++' . Exp                                   (rule 68)

	'!'            shift, and enter state 40
	'('            shift, and enter state 41
	'*'            shift, and enter state 42
	'++'           shift, and enter state 43
	L_ident        shift, and enter state 21
	L_quoted       shift, and enter state 44
	L_integ        shift, and enter state 45
	L_doubl        shift, and enter state 46

	Ident          goto state 30
	String         goto state 31
	Integer        goto state 32
	Double         goto state 33
	Exp            goto state 123
	Exp1           goto state 35
	Exp2           goto state 36
	Exp3           goto state 37
	Exp4           goto state 38

State 44

	String -> L_quoted .                                (rule 21)

	'&&'           reduce using rule 21
	')'            reduce using rule 21
	'*'            reduce using rule 21
	'+'            reduce using rule 21
	','            reduce using rule 21
	'-'            reduce using rule 21
	'->'           reduce using rule 21
	':'            reduce using rule 21
	';'            reduce using rule 21
	'<'            reduce using rule 21
	'<<'           reduce using rule 21
	'<='           reduce using rule 21
	'=='           reduce using rule 21
	'>='           reduce using rule 21
	'>>'           reduce using rule 21
	'?'            reduce using rule 21
	']'            reduce using rule 21
	'||'           reduce using rule 21
	%eof           reduce using rule 21


State 45

	Integer -> L_integ .                                (rule 22)

	'&&'           reduce using rule 22
	')'            reduce using rule 22
	'*'            reduce using rule 22
	'+'            reduce using rule 22
	','            reduce using rule 22
	'-'            reduce using rule 22
	'->'           reduce using rule 22
	':'            reduce using rule 22
	';'            reduce using rule 22
	'<'            reduce using rule 22
	'<<'           reduce using rule 22
	'<='           reduce using rule 22
	'=='           reduce using rule 22
	'>='           reduce using rule 22
	'>>'           reduce using rule 22
	'?'            reduce using rule 22
	']'            reduce using rule 22
	'||'           reduce using rule 22
	%eof           reduce using rule 22


State 46

	Double -> L_doubl .                                 (rule 23)

	'&&'           reduce using rule 23
	')'            reduce using rule 23
	'*'            reduce using rule 23
	'+'            reduce using rule 23
	','            reduce using rule 23
	'-'            reduce using rule 23
	'->'           reduce using rule 23
	':'            reduce using rule 23
	';'            reduce using rule 23
	'<'            reduce using rule 23
	'<<'           reduce using rule 23
	'<='           reduce using rule 23
	'=='           reduce using rule 23
	'>='           reduce using rule 23
	'>>'           reduce using rule 23
	'?'            reduce using rule 23
	']'            reduce using rule 23
	'||'           reduce using rule 23
	%eof           reduce using rule 23


State 47

	Exp4 -> Ident . '(' ListExp ')'                     (rule 78)
	Exp4 -> Ident .                                     (rule 79)

	'&&'           reduce using rule 79
	'('            shift, and enter state 116
	')'            reduce using rule 79
	'*'            reduce using rule 79
	'+'            reduce using rule 79
	','            reduce using rule 79
	'-'            reduce using rule 79
	'->'           reduce using rule 79
	':'            reduce using rule 79
	';'            reduce using rule 79
	'<'            reduce using rule 79
	'<<'           reduce using rule 79
	'<='           reduce using rule 79
	'=='           reduce using rule 79
	'>='           reduce using rule 79
	'>>'           reduce using rule 79
	'?'            reduce using rule 79
	']'            reduce using rule 79
	'||'           reduce using rule 79
	%eof           reduce using rule 79


State 48

	%start_pExp4 -> Exp4 .                              (rule 17)

	%eof           accept


State 49

	%start_pExp3 -> Exp3 .                              (rule 16)
	Exp3 -> Exp3 . '*' Exp4                             (rule 76)

	'*'            shift, and enter state 122
	%eof           accept


State 50

	%start_pExp2 -> Exp2 .                              (rule 15)
	Exp2 -> Exp2 . '+' Exp3                             (rule 73)
	Exp2 -> Exp2 . '-' Exp3                             (rule 74)

	'+'            shift, and enter state 120
	'-'            shift, and enter state 121
	%eof           accept


State 51

	%start_pExp1 -> Exp1 .                              (rule 14)

	%eof           accept


State 52

	%start_pExp -> Exp .                                (rule 13)
	Exp -> Exp . '>>' Exp                               (rule 56)
	Exp -> Exp . '<<' Exp                               (rule 57)
	Exp -> Exp . '?' Exp ':' Exp                        (rule 58)
	Exp -> Exp . '==' Exp                               (rule 59)
	Exp -> Exp . '<=' Exp                               (rule 63)
	Exp -> Exp . '>=' Exp                               (rule 64)
	Exp -> Exp . '&&' Exp                               (rule 66)
	Exp -> Exp . '->' Exp                               (rule 67)
	Exp -> Exp . '||' Exp                               (rule 69)

	'&&'           shift, and enter state 98
	'->'           shift, and enter state 99
	'<<'           shift, and enter state 101
	'<='           shift, and enter state 102
	'=='           shift, and enter state 103
	'>='           shift, and enter state 104
	'>>'           shift, and enter state 105
	'?'            shift, and enter state 106
	'||'           shift, and enter state 107
	%eof           accept


State 53

	Name -> Ident . '::' Ident                          (rule 49)
	Exp -> Ident . '.' Ident '(' ListExp ')' ';'        (rule 54)
	Exp -> Ident . '=' Exp                              (rule 55)
	Exp -> Ident . '[' Exp ']'                          (rule 60)
	Exp -> Ident . '&'                                  (rule 61)
	Exp4 -> Ident . '(' ListExp ')'                     (rule 78)
	Exp4 -> Ident .                                     (rule 79)
